--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Astro - Code
 email: willdebuena@gmail.com
 description: >
-  "Notas de Astronomia, códigos e Energia. Bloco de notas."
+  "Notas sobre tudo."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: 
